updated and removed all passkeys for supabase/postgre

--- a/FAISS_recommendation (2).ipynb
+++ b/FAISS_recommendation (2).ipynb
@@ -160,7 +160,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -180,7 +180,7 @@
       "source": [
         "import psycopg2\n",
         "\n",
-        "dsn = \"postgresql://postgres.nadhmtzcadqlinkcqejq:?q#-dhNN-.J9tMc@aws-0-ap-south-1.pooler.supabase.com:5432/postgres?sslmode=require\"\n",
+        "dsn = \"add your own dsn\"\n",
         "\n",
         "try:\n",
         "    conn = psycopg2.connect(dsn)\n",
@@ -1209,15 +1209,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "id": "IUKZKYprzATm"
       },
       "outputs": [],
       "source": [
-        "SUPABASE_URL = \"https://nadhmtzcadqlinkcqejq.supabase.co\"\n",
-        "SUPABASE_SERVICE_ROLE_KEY = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5hZGhtdHpjYWRxbGlua2NxZWpxIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc1MTU0OTc5OCwiZXhwIjoyMDY3MTI1Nzk4fQ.44s91p0cgtz_Kx544yMHfLXLXGqfeoqjFF8KJiIEPtA\"  # Paste here\n",
-        "\n",
+        "SUPABASE_URL = \"add yours\"\n",
+        "SUPABASE_SERVICE_ROLE_KEY = \"add yours\"\n",
         "supabase: Client = create_client(SUPABASE_URL, SUPABASE_SERVICE_ROLE_KEY)\n"
       ]
     },
@@ -1263,7 +1262,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 45,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1296,8 +1295,8 @@
         "from supabase import create_client\n",
         "\n",
         "# Use your project's credentials\n",
-        "SUPABASE_URL = \"https://nadhmtzcadqlinkcqejq.supabase.co\"\n",
-        "SUPABASE_KEY = \"eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im5hZGhtdHpjYWRxbGlua2NxZWpxIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc1MTU0OTc5OCwiZXhwIjoyMDY3MTI1Nzk4fQ.44s91p0cgtz_Kx544yMHfLXLXGqfeoqjFF8KJiIEPtA\"  # Or service_role if in backend code\n",
+        "SUPABASE_URL = \"add your own\"\n",
+        "SUPABASE_KEY = \"add your own\"\n",
         "\n",
         "supabase = create_client(SUPABASE_URL, SUPABASE_KEY)\n",
         "\n",
@@ -1526,7 +1525,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 55,
+      "execution_count": null,
       "metadata": {
         "id": "5pukQ8Jc-20J"
       },
@@ -1540,8 +1539,8 @@
         "    host=\"aws-0-ap-south-1.pooler.supabase.com\",\n",
         "    port=\"5432\",\n",
         "    dbname=\"postgres\",\n",
-        "    user=\"postgres.nadhmtzcadqlinkcqejq\",\n",
-        "    password=\"?q#-dhNN-.J9tMc\"  # Replace with actual password\n",
+        "    user=\"add your own\",\n",
+        "    password=\"add your own\"  # Replace with actual password\n",
         ")\n",
         "cur = conn.cursor(cursor_factory=psycopg2.extras.RealDictCursor)\n",
         "\n"
@@ -1549,7 +1548,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1572,8 +1571,8 @@
         "    host=\"aws-0-ap-south-1.pooler.supabase.com\",\n",
         "    port=\"5432\",\n",
         "    dbname=\"postgres\",\n",
-        "    user=\"postgres.nadhmtzcadqlinkcqejq\",\n",
-        "    password=\"?q#-dhNN-.J9tMc\"\n",
+        "    user=\"add your own\",\n",
+        "    password=\"add your own\"\n",
         ")\n",
         "cur = conn.cursor()\n",
         "\n",
